k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogrello
  namespace: cryptnode-dev
spec:
  selector:
    app: gogrello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
