k8/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gogrello
  namespace: cryptnode-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`gogrello.cryptnode.tech`) && PathPrefix(`/`))
      kind: Rule
      priority: 10000
      services:
        - name: gogrello
          port: 80
  tls:
    secretName: cryptnode-tls-cert-secret
